# Post_Creator

./: .env.example  .gitignore  CLAUDE.md  PROGRESS.md  README.md  pyproject.toml  sources.json
deploy/systemd/: article-writer.service
docs/: ARCHITECTURE.md
docs/stages/: stage-1.md  stage-2.md  stage-3.md  stage-4.md
docs/superpowers/plans/: 2026-05-23-llm-reranking.md
docs/superpowers/specs/: 2026-05-23-llm-reranking-design.md
prompts/: linkedin_system_prompt.txt  reddit_system_prompt.txt  twitter_system_prompt.txt
src/article_writer/: __init__.py  __main__.py  article_options.py  cli.py  config.py  logging_setup.py  models.py
src/article_writer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/article_writer/generation/: article_generator.py  base.py  keyword_suggester.py  llm_usage.py  template_generator.py
src/article_writer/pipeline/: run_daily.py  scheduler.py
src/article_writer/ranking/: llm_ranker.py  scorer.py
src/article_writer/sources/: __init__.py  arxiv.py  base.py  deepmind.py  github.py  hackernews.py  lobsters.py  netlify.py  product_hunt.py  reddit.py  rss.py
src/article_writer/storage/: sqlite_store.py
src/article_writer/web/: app.py
tests/: conftest.py  test_api_llm_rank.py  test_article_generator.py  test_config.py  test_keywords_api.py  test_keywords_page.py  test_keywords_store.py  test_llm_rank_store.py  test_llm_ranker.py  test_lobsters.py  test_pipeline.py  test_pipeline_llm_rank.py  test_ranking.py  test_rss.py  test_scorer_keywords.py  test_web.py
(+15 files in other folders)
